# EPyT-Flow

./: .gitignore  .readthedocs.yml  CITATION.cff  DEVELOPERS.md  LICENSE  MANIFEST.in  README.md  REQUIREMENTS-DEV.txt  REQUIREMENTS.txt  examples.py  my_scenario_config.xml  net2-cl2.inp  noxfile.py  pyproject.toml  setup.py  setup_pip.py  structure.drawio
.github/: pull_request_template.md
EPANET/: compile.sh
docs/: basicusage.rst  conf.py  epyt_flow.data.benchmarks.rst  epyt_flow.data.rst  epyt_flow.detectors.rst  epyt_flow.gym.rst  epyt_flow.models.rst  epyt_flow.rest_api.rst  epyt_flow.rest_api.scada_data.rst  epyt_flow.rest_api.scenario.rst  epyt_flow.rst  epyt_flow.simulation.backend.rst  epyt_flow.simulation.events.rst  epyt_flow.simulation.rst  epyt_flow.simulation.scada.rst  epyt_flow.uncertainty.rst  epyt_flow.visualization.rst  index.rst  installation.rst  requirements.txt  tut.control.rst  tut.events.rst  tut.features.rst  tut.intro.rst  tut.quality.rst  tut.restapi.rst  tut.scada.rst  tut.scenarios.rst  tut.serialization.rst  tut.uncertainty.rst  tut.visualization.rst  tutorial.rst  usage.rst
epyt_flow/: __init__.py  metrics.py  serialization.py  topology.py  utils.py
examples/: abrupt_leakage.py  arsenic_contamination.msx  arsenic_contamination.py  chlorine_injection.py  complex_control_example.py  control_example.py  custom_control_example.py  event_detection.py  leak_detection.py  net2-cl2_example.py  network_topology.py  plot_network.py  pump_states.py  quick_example.py  sensor_fault.py  sensor_override_attack.py  sensor_replay_attack.py  (+3 more)
(+171 files in other folders)
