[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "epyt-flow"
description = "EPyT-Flow -- EPANET Python Toolkit - Flow"
authors = [
    {name = "André Artelt", email = "aartelt@techfak.uni-bielefeld.de"},
    {name = "Marios S. Kyriakou", email = "kiriakou.marios@ucy.ac.cy"},
    {name = "Stelios G. Vrachimis", email = "vrachimis.stelios@ucy.ac.cy"},
]
license = {text = "MIT License"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords=["epanet", "water", "networks", "hydraulics", "quality", "simulations"]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = "https://github.com/WaterFutures/EPyT-Flow"
Documentation = "https://epyt-flow.readthedocs.io/en/stable/"
Repository = "https://github.com/WaterFutures/EPyT-Flow.git"
Issues = "https://github.com/WaterFutures/EPyT-Flow/issues"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "epyt_flow.VERSION"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "REQUIREMENTS.txt"}
